Enhancee product handling and email functionality, optimize UX
- Integrated email functionality in `SecondActivity` for sending selected product details via an implicit intent.
- Added Parcelable support to `Product` class to facilitate seamless data transfer between activities.
- Enhanced product selection in `MainActivity` with RecyclerView, allowing multiple product selections.
- Improved image handling by allowing users to select product images from their device in `AddProductActivity`.
- Implemented SplashScreenActivity for an improved app loading experience.
- Added user feedback mechanisms like Toast to improve interaction clarity.

--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -69,7 +69,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        />
 
     <TextView
         android:id="@+id/textViewHint"
@@ -92,7 +93,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="10dp"
-        app:layout_constraintHorizontal_weight="1" />
+        app:layout_constraintHorizontal_weight="1"
+        android:backgroundTint="@color/navy_blue"/>
 
     <!-- Cancel Button -->
     <Button
@@ -106,6 +108,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="10dp"
-        app:layout_constraintHorizontal_weight="1" />
+        app:layout_constraintHorizontal_weight="1"
+        android:backgroundTint="@color/navy_blue"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
