--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Buttons aligned horizontally and anchored to the bottom -->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewProducts"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnRefresh"
-        app:layout_constraintBottom_toTopOf="@+id/btnDeleteProduct"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnRefresh"
+        app:layout_constraintBottom_toTopOf="@+id/btnDeleteProduct"/>
 
-    <!-- Buttons aligned horizontally and anchored to the bottom -->
+
     <Button
         android:id="@+id/btnDeleteProduct"
         android:layout_width="wrap_content"
@@ -27,7 +29,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/navy_blue"
+        />
 
     <Button
         android:id="@+id/btnNext"
@@ -37,7 +41,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnDeleteProduct"
         app:layout_constraintEnd_toStartOf="@+id/btnAddProduct"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/navy_blue"/>
 
     <Button
         android:id="@+id/btnAddProduct"
@@ -47,7 +52,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/navy_blue"/>
 
     <TextView
         android:id="@+id/ProductsLabel"
@@ -72,7 +78,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias=".90"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="10dp"
+        android:backgroundTint="@color/navy_blue"
+        />
 
 
 
