--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,16 +19,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:padding="16dp" />
 
-        <!-- Button to send email -->
+        <!-- Return to Home Button -->
+        <ImageButton
+            android:id="@+id/buttonHome"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Home"
+            android:padding="5dp"
+            android:src="@drawable/home_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/navy_blue" />
+
+        <!-- Send Email Button -->
         <Button
             android:id="@+id/btnEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Send Email"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="16dp"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintHorizontal_weight="1"
+            android:backgroundTint="@color/navy_blue"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
