--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     tools:context=".ProductAdapter">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+    <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="8dp">
+
+<ImageView
+    android:id="@+id/productImage"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:scaleType="fitCenter"
+    android:contentDescription="Product Image" />
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/productName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:text="Product Name"
+        android:textSize="18sp"
+        android:paddingTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-        <ImageView
-            android:id="@+id/productImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="fitCenter"
-            android:contentDescription="Product Image" />
+    <CheckBox
+        android:id="@+id/productCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"
 
-        <TextView
-            android:id="@+id/productName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Product Name"
-            android:textSize="18sp"
-            android:paddingTop="8dp" />
-
-        <TextView
-            android:id="@+id/productDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Product Description"
-            android:textSize="14sp"
-            android:paddingTop="4dp" />
-
-        <TextView
-            android:id="@+id/productSeller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seller Name"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/productPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:textSize="16sp" />
-
-    </LinearLayout>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<TextView
+    android:id="@+id/productDescription"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Product Description"
+    android:textSize="16sp"
+    android:paddingTop="0dp" />
+
+<TextView
+    android:id="@+id/productSeller"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Seller Name"
+    android:textSize="16sp" />
+
+<TextView
+    android:id="@+id/productPrice"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Price"
+    android:textSize="16dp" />
+
+</LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
