--- a/app/src/main/res/values/EnvSecrets.xml
+++ b/app/src/main/res/values/EnvSecrets.xml
@@ -2,6 +2,6 @@
 
 <resources>
 
-    <string name="email">rjorozco1997@gmail.com</string>
+    <string name="targetEmail">rjorozco1997@gmail.com</string>
 
 </resources>
